2008-03-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to not use nick format for transcripts.

2008-03-19  Satoshi Nakagawa <artension@gmail.com>

	Changed to handle /whois to get more information.

2008-03-19  Kevin Ballard <kballard@gmail.com>

	Added Rakefile and changed install path to /Applications.

2008-03-19  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug in utf-8 string validator.

2008-03-19  Satoshi Nakagawa <artension@gmail.com>

	Added fallback encoding.

2008-03-16  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, log views dropped received lines before initializing.

2008-03-14  Satoshi Nakagawa <artension@gmail.com>

	Refactoring key handlers.
	Added opt-up/down to move around histories.

2008-03-12  Satoshi Nakagawa <artension@gmail.com>

	Removed opt-up/down because it interfered with ctrl-a/e.

2008-03-12  Satoshi Nakagawa <artension@gmail.com>

	Added SSL support.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, 'Reveal in Finder' menu action on the dcc dialog caused an exception.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Now we can use more delimiters for nick completion.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Added /rejoin, /cycle and /hop commands to rejoin the current channel.
	Fixed a bug, 'Highlight your current nickname' option should be applied for the console log.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Added 'New Folder' button on the open dialog for transcripts location.
	Changed priority of Growl notifications to 1 for highlight events.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Added opt-up/down for moving around histories.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, /query command should be cleared after opening a talk.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>

	Changed to select an existing talk when trying to start a talk again.

2008-03-11  Satoshi Nakagawa <artension@gmail.com>
